nestedstack/main.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Main stack example that uses a nested stack",
  "Parameters": {
    "CidrBlock": {
      "Description": "IP Address range that will be used in the VPC",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
    },
    "KeyName": {
      "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instances",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
    },
    "InstanceType": {
      "Type": "String",
      "Default": "t1.micro",
      "AllowedValues": [
        "t1.micro",
        "m1.small",
        "m1.large"
      ],
      "Description": "Enter t1.micro, m1.small, or m1.large. Default is t1.micro."
    },
    "SSHLocation": {
      "Description": "The IP address range that can be used to SSH to the EC2 instances",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x"
    }
  },
  "Mappings": {
    "RegionMap": {
      "us-east-1": {
        "AMI": "ami-fb8e9292"
      },
      "us-west-1": {
        "AMI": "ami-7aba833f"
      },
      "us-west-2": {
        "AMI": "ami-043a5034"
      },
      "eu-west-1": {
        "AMI": "ami-2918e35e"
      },
      "ap-southeast-1": {
        "AMI": "ami-b40d5ee6"
      },
      "ap-southeast-2": {
        "AMI": "ami-3b4bd301"
      },
      "ap-northeast-1": {
        "AMI": "ami-c9562fc8"
      },
      "sa-east-1": {
        "AMI": "ami-215dff3c"
      },
      "eu-central-1": {
        "AMI": "ami-a03503bd"
      }
    }
  },
  "Resources": {
    "MyVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "CidrBlock"
        },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true
      }
    },
    "MySecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Default Security Group",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "SSHLocation"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "CidrBlock"
            }
          }
        ],
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "MyInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "RegionMap",
            {
              "Ref": "AWS::Region"
            },
            "AMI"
          ]
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "SecurityGroupIds": [
          {
            "Ref": "MySecurityGroup"
          }
        ]
      }
    },
    "MyNestedStack": {
      "DependsOn" : [ "MyVPC" ],
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "NotificationARNs": [ "arn:aws:sns:eu-west-1:857285822921:tiaglima" ],
        "TemplateURL": "https://s3.amazon.com/tiaglima-bucket/cloudformation/nested-stack.template",
        "TimeoutInMinutes": "5",
        "Parameters" : {
          "MyVPC" : {"Ref" : "MyVPC"}
        }
      }
    }
  }
}
